<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/string_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/json_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/image_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/image_loader_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_loader"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/network_image_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_image_view"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customize_request"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </ScrollView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_result"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"/>

            <FrameLayout
                android:id="@+id/network_image_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>


    </LinearLayout>





</LinearLayout>
